Fixed warnings and migration aids reported by IDEA