@@ -204,16 +204,16 @@ public class TableOfContentsCreatorTest {
 
     @Test
     public void indexPageIsConsideredInPageNumbers() throws IOException, TaskException {
-        TableOfContentsCreator victim = newToCCreator(ToCPolicy.DOC_TITLES, 
-                Arrays.asList("This is a very long file name and we expect that it's handled correctly and no Exception is thrown by the component. We are making this very very long so we can make sure that even the veeeery long ones are handled."));
-        
+        TableOfContentsCreator victim = newToCCreator(ToCPolicy.DOC_TITLES,
+                List.of("This is a very long file name and we expect that it's handled correctly and no Exception is thrown by the component. We are making this very very long so we can make sure that even the veeeery long ones are handled."));
+
         victim.addToC();
         assertThat(getDocTextNormalized(victim.getDoc()), endsWith("veeeery long ones are handled.   101\n"));
     }
 
     @Test
     public void testTocNumberOfPagesNoToc() throws TaskException {
-        TableOfContentsCreator victim = newToCCreator(ToCPolicy.NONE, Arrays.asList("sample title"));
+        TableOfContentsCreator victim = newToCCreator(ToCPolicy.NONE, List.of("sample title"));
         int tocNumPages = victim.addToC();
         assertEquals(0, tocNumPages);
         assertEquals(0, victim.getDoc().getNumberOfPages());
@@ -283,10 +283,12 @@ public class TableOfContentsCreatorTest {
         victim.pageSizeIfNotSet(PDRectangle.A4);
         victim.addToC();
 
-        assertPageTextExactLines(doc.getPage(0),
-                "This is item 1   2\n" + "This is item 2 that has a very long name and should not be\n"
-                        + "truncated so that the version is visible at the end v7.pdf   11\n"
-                        + "This is item 3   15\n");
+        assertPageTextExactLines(doc.getPage(0), """
+                This is item 1   2
+                This is item 2 that has a very long name and should not be
+                truncated so that the version is visible at the end v7.pdf   11
+                This is item 3   15
+                """);
 
         // verify size of the clickable annotations on top of the TOC items
         List<PDAnnotationLink> annotations = TestUtils.getAnnotationsOf(doc.getPage(0), PDAnnotationLink.class);
@@ -325,13 +327,15 @@ public class TableOfContentsCreatorTest {
 
     @Test
     public void test_Toc_Long_Item_That_Has_No_Word_Breaks() throws TaskException {
-        TableOfContentsCreator victim = newToCCreator("This_is_a_file_that_has_a_very_long_name_and_should_not_be_truncated_so_that_the_version_is_visible_at_the_end_v7.pdf");
+        TableOfContentsCreator victim = newToCCreator(
+                "This_is_a_file_that_has_a_very_long_name_and_should_not_be_truncated_so_that_the_version_is_visible_at_the_end_v7.pdf");
         victim.pageSizeIfNotSet(PDRectangle.A4);
         victim.addToC();
 
-        assertPageTextExactLines(victim.getDoc().getPage(0),
-                "This_is_a_file_that_has_a_very_long_name_and_should_not_be-\n"
-                        + "_truncated_so_that_the_version_is_visible_at_the_end_v7.pdf   101\n");
+        assertPageTextExactLines(victim.getDoc().getPage(0), """
+                This_is_a_file_that_has_a_very_long_name_and_should_not_be-
+                _truncated_so_that_the_version_is_visible_at_the_end_v7.pdf   101
+                """);
     }
 
     @Test
@@ -344,11 +348,11 @@ public class TableOfContentsCreatorTest {
     }
 
     @Test
-    public void tocItemsMultipleFontsButNotFound() throws TaskException {
+    public void tocItemsMultipleFontsButNotFound() {
         TableOfContentsCreator victim = newToCCreator();
         victim.appendItem("Item multiple fonts հայերէն", 10, new PDPage());
         victim.pageSizeIfNotSet(PDRectangle.A4);
-        assertThrows(UnsupportedTextException.class, () -> victim.addToC());
+        assertThrows(UnsupportedTextException.class, victim::addToC);
     }
 
     @Test
@@ -439,57 +443,59 @@ public class TableOfContentsCreatorTest {
                 entries.add("Attachment " + i + " - Sample file name - shorter");
             }
         }
-        
+
         TableOfContentsCreator victim = newToCCreator(entries);
         victim.pageSizeIfNotSet(PDRectangle.A4);
 
         victim.addToC();
-        
+
         assertThat(victim.getDoc().getNumberOfPages(), is(2));
-        
-        String expected = "Attachment 1 - Sample file name - shorter   102\n" +
-                "Attachment 2 - Sample file name - shorter   103\n" +
-                "Attachment 3 - Sample file name - longer item that might wrap on\n" +
-                "the next line   104\n" +
-                "Attachment 4 - Sample file name - shorter   105\n" +
-                "Attachment 5 - Sample file name - shorter   106\n" +
-                "Attachment 6 - Sample file name - longer item that might wrap on\n" +
-                "the next line   107\n" +
-                "Attachment 7 - Sample file name - shorter   108\n" +
-                "Attachment 8 - Sample file name - shorter   109\n" +
-                "Attachment 9 - Sample file name - longer item that might wrap on\n" +
-                "the next line   110\n" +
-                "Attachment 10 - Sample file name - shorter   111\n" +
-                "Attachment 11 - Sample file name - shorter   112\n" +
-                "Attachment 12 - Sample file name - longer item that might wrap\n" +
-                "on the next line   113\n" +
-                "Attachment 13 - Sample file name - shorter   114\n" +
-                "Attachment 14 - Sample file name - shorter   115\n" +
-                "Attachment 15 - Sample file name - longer item that might wrap\n" +
-                "on the next line   116\n" +
-                "Attachment 16 - Sample file name - shorter   117\n" +
-                "Attachment 17 - Sample file name - shorter   118\n" +
-                "Attachment 18 - Sample file name - longer item that might wrap\n" +
-                "on the next line   119\n" +
-                "Attachment 19 - Sample file name - shorter   120\n" +
-                "Attachment 20 - Sample file name - shorter   121\n" +
-                "Attachment 21 - Sample file name - longer item that might wrap\n" +
-                "on the next line   122\n" +
-                "Attachment 22 - Sample file name - shorter   123\n" +
-                "Attachment 23 - Sample file name - shorter   124\n" +
-                "Attachment 24 - Sample file name - longer item that might wrap\n" +
-                "on the next line   125\n" +
-                "Attachment 25 - Sample file name - shorter   126\n" +
-                "Attachment 26 - Sample file name - shorter   127\n";
+
+        String expected = """
+                Attachment 1 - Sample file name - shorter   102
+                Attachment 2 - Sample file name - shorter   103
+                Attachment 3 - Sample file name - longer item that might wrap on
+                the next line   104
+                Attachment 4 - Sample file name - shorter   105
+                Attachment 5 - Sample file name - shorter   106
+                Attachment 6 - Sample file name - longer item that might wrap on
+                the next line   107
+                Attachment 7 - Sample file name - shorter   108
+                Attachment 8 - Sample file name - shorter   109
+                Attachment 9 - Sample file name - longer item that might wrap on
+                the next line   110
+                Attachment 10 - Sample file name - shorter   111
+                Attachment 11 - Sample file name - shorter   112
+                Attachment 12 - Sample file name - longer item that might wrap
+                on the next line   113
+                Attachment 13 - Sample file name - shorter   114
+                Attachment 14 - Sample file name - shorter   115
+                Attachment 15 - Sample file name - longer item that might wrap
+                on the next line   116
+                Attachment 16 - Sample file name - shorter   117
+                Attachment 17 - Sample file name - shorter   118
+                Attachment 18 - Sample file name - longer item that might wrap
+                on the next line   119
+                Attachment 19 - Sample file name - shorter   120
+                Attachment 20 - Sample file name - shorter   121
+                Attachment 21 - Sample file name - longer item that might wrap
+                on the next line   122
+                Attachment 22 - Sample file name - shorter   123
+                Attachment 23 - Sample file name - shorter   124
+                Attachment 24 - Sample file name - longer item that might wrap
+                on the next line   125
+                Attachment 25 - Sample file name - shorter   126
+                Attachment 26 - Sample file name - shorter   127
+                """;
 
         assertDocTextExactLines(victim.getDoc(), expected);
     }
 
     @Test
-    public void lastItemDoesNotFitPage_WrapsToNextPage() throws TaskException, IOException {
+    public void lastItemDoesNotFitPage_WrapsToNextPage() throws TaskException {
         List<String> entries = new ArrayList<>();
-        for(int i = 1; i <= 22; i++) {
-            if(i % 3 == 0) {
+        for (int i = 1; i <= 22; i++) {
+            if (i % 3 == 0) {
                 entries.add("Attachment " + i + " - Sample file name - longer item that might wrap on the next line");
             } else {
                 entries.add("Attachment " + i + " - Sample file name - shorter");
